// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`omrTemplateJson.service - snapshot tests A4 default template converts to expected JSON 1`] = `
Object {
  "autoAlign": true,
  "bubbleDimensions": Array [
    47,
    47,
  ],
  "customLabels": Object {},
  "emptyValue": "",
  "fieldBlocks": Object {
    "answer_area_col_0": Object {
      "bubbleHeight": 47,
      "bubbleWidth": 47,
      "bubblesGap": 59,
      "direction": "horizontal",
      "emptyValue": "",
      "fieldLabels": Array [
        "q1",
        "q6",
        "q11",
        "q16",
        "q21",
        "q26",
      ],
      "fieldType": "QTYPE_MCQ4",
      "labelsGap": 141,
      "origin": Array [
        365,
        1299,
      ],
    },
    "answer_area_col_1": Object {
      "bubbleHeight": 47,
      "bubbleWidth": 47,
      "bubblesGap": 59,
      "direction": "horizontal",
      "emptyValue": "",
      "fieldLabels": Array [
        "q2",
        "q7",
        "q12",
        "q17",
        "q22",
        "q27",
      ],
      "fieldType": "QTYPE_MCQ4",
      "labelsGap": 141,
      "origin": Array [
        718,
        1299,
      ],
    },
    "answer_area_col_2": Object {
      "bubbleHeight": 47,
      "bubbleWidth": 47,
      "bubblesGap": 59,
      "direction": "horizontal",
      "emptyValue": "",
      "fieldLabels": Array [
        "q3",
        "q8",
        "q13",
        "q18",
        "q23",
        "q28",
      ],
      "fieldType": "QTYPE_MCQ4",
      "labelsGap": 141,
      "origin": Array [
        1071,
        1299,
      ],
    },
    "answer_area_col_3": Object {
      "bubbleHeight": 47,
      "bubbleWidth": 47,
      "bubblesGap": 59,
      "direction": "horizontal",
      "emptyValue": "",
      "fieldLabels": Array [
        "q4",
        "q9",
        "q14",
        "q19",
        "q24",
        "q29",
      ],
      "fieldType": "QTYPE_MCQ4",
      "labelsGap": 141,
      "origin": Array [
        1424,
        1299,
      ],
    },
    "answer_area_col_4": Object {
      "bubbleHeight": 47,
      "bubbleWidth": 47,
      "bubblesGap": 59,
      "direction": "horizontal",
      "emptyValue": "",
      "fieldLabels": Array [
        "q5",
        "q10",
        "q15",
        "q20",
        "q25",
        "q30",
      ],
      "fieldType": "QTYPE_MCQ4",
      "labelsGap": 141,
      "origin": Array [
        1777,
        1299,
      ],
    },
    "student_code": Object {
      "bubbleHeight": 30,
      "bubbleWidth": 30,
      "bubblesGap": 42,
      "emptyValue": "",
      "fieldLabels": Array [
        "roll1",
        "roll2",
        "roll3",
      ],
      "fieldType": "QTYPE_INT",
      "labelsGap": 42,
      "origin": Array [
        286,
        780,
      ],
    },
    "version_code": Object {
      "bubbleHeight": 24,
      "bubbleWidth": 24,
      "bubblesGap": 30,
      "emptyValue": "",
      "fieldLabels": Array [
        "ver1",
        "ver2",
        "ver3",
      ],
      "fieldType": "QTYPE_INT",
      "labelsGap": 30,
      "origin": Array [
        1364,
        780,
      ],
    },
  },
  "name": "A4 Default Test",
  "outputColumns": Array [
    "q1",
    "q2",
    "q3",
    "q4",
    "q5",
    "q6",
    "q7",
    "q8",
    "q9",
    "q10",
    "q11",
    "q12",
    "q13",
    "q14",
    "q15",
    "q16",
    "q17",
    "q18",
    "q19",
    "q20",
    "q21",
    "q22",
    "q23",
    "q24",
    "q25",
    "q26",
    "q27",
    "q28",
    "q29",
    "q30",
  ],
  "pageDimensions": Array [
    2480,
    3508,
  ],
  "preProcessors": Array [],
}
`;

exports[`omrTemplateJson.service - snapshot tests A5 15-question template (matches omr_template.from15Question) 1`] = `
Object {
  "autoAlign": true,
  "bubbleDimensions": Array [
    47,
    47,
  ],
  "customLabels": Object {},
  "emptyValue": "",
  "fieldBlocks": Object {
    "answer_area_col_0": Object {
      "bubbleHeight": 35,
      "bubbleWidth": 35,
      "bubblesGap": 47,
      "direction": "horizontal",
      "emptyValue": "",
      "fieldLabels": Array [
        "q1",
        "q6",
        "q11",
      ],
      "fieldType": "QTYPE_MCQ4",
      "labelsGap": 82,
      "origin": Array [
        354,
        803,
      ],
    },
    "answer_area_col_1": Object {
      "bubbleHeight": 35,
      "bubbleWidth": 35,
      "bubblesGap": 47,
      "direction": "horizontal",
      "emptyValue": "",
      "fieldLabels": Array [
        "q2",
        "q7",
        "q12",
      ],
      "fieldType": "QTYPE_MCQ4",
      "labelsGap": 82,
      "origin": Array [
        648,
        803,
      ],
    },
    "answer_area_col_2": Object {
      "bubbleHeight": 35,
      "bubbleWidth": 35,
      "bubblesGap": 47,
      "direction": "horizontal",
      "emptyValue": "",
      "fieldLabels": Array [
        "q3",
        "q8",
        "q13",
      ],
      "fieldType": "QTYPE_MCQ4",
      "labelsGap": 82,
      "origin": Array [
        942,
        803,
      ],
    },
    "answer_area_col_3": Object {
      "bubbleHeight": 35,
      "bubbleWidth": 35,
      "bubblesGap": 47,
      "direction": "horizontal",
      "emptyValue": "",
      "fieldLabels": Array [
        "q4",
        "q9",
        "q14",
      ],
      "fieldType": "QTYPE_MCQ4",
      "labelsGap": 82,
      "origin": Array [
        1236,
        803,
      ],
    },
    "answer_area_col_4": Object {
      "bubbleHeight": 35,
      "bubbleWidth": 35,
      "bubblesGap": 47,
      "direction": "horizontal",
      "emptyValue": "",
      "fieldLabels": Array [
        "q5",
        "q10",
        "q15",
      ],
      "fieldType": "QTYPE_MCQ4",
      "labelsGap": 82,
      "origin": Array [
        1530,
        803,
      ],
    },
    "student_code": Object {
      "bubbleHeight": 35,
      "bubbleWidth": 35,
      "bubblesGap": 47,
      "emptyValue": "",
      "fieldLabels": Array [
        "roll1",
        "roll2",
      ],
      "fieldType": "QTYPE_INT",
      "labelsGap": 47,
      "origin": Array [
        301,
        248,
      ],
    },
    "version_code": Object {
      "bubbleHeight": 35,
      "bubbleWidth": 35,
      "bubblesGap": 47,
      "emptyValue": "",
      "fieldLabels": Array [
        "ver1",
        "ver2",
      ],
      "fieldType": "QTYPE_INT",
      "labelsGap": 47,
      "origin": Array [
        998,
        248,
      ],
    },
  },
  "name": "15q A5",
  "outputColumns": Array [
    "q1",
    "q2",
    "q3",
    "q4",
    "q5",
    "q6",
    "q7",
    "q8",
    "q9",
    "q10",
    "q11",
    "q12",
    "q13",
    "q14",
    "q15",
  ],
  "pageDimensions": Array [
    1748,
    2480,
  ],
  "preProcessors": Array [],
}
`;
